throw new IllegalStateException("Not yet implemented.");syntax = "proto3";

package bestia; 

option java_package = "net.bestia.message";
option java_outer_classname = "AccountProto";


message AccountMessage {
  int32 account_id = 1;
}

message EntityMessage {
  int64 entity_id = 1;
}