syntax = "proto3";

package bnet;

option java_package = "net.bestia.bnet.proto";
option java_outer_classname = "AttackEntityCmsgProto";

/**
 * Sends the active selected entity to the server.
 */
message AttackEntityCMSG {
  uint64 entity_id = 1;
  /**
   * 0 means basic attack. Everything else requires a lookup against
   * the attack list.
   */
  uint64 used_attack_id = 2;

  uint32 skill_level = 3;
}
