syntax = "proto3";

package bnet;

option java_package = "net.bestia.bnet.proto";
option java_outer_classname = "SelectActiveEntityProto";

/**
 * Sends the active selected entity to the server.
 */
message SelectActiveEntity {
  uint64 entity_id = 1;
}
