syntax = "proto3";

package bnet;

option java_package = "net.bestia.bnet.proto";
option java_outer_classname = "ListMasterProto";

/**
 * Asks the server to send back a list with available master to the current
 * account.
 */
message GetMasterCMSG {}
