syntax = "proto3";

package bnet;

option java_package = "net.bestia.bnet.proto";
option java_outer_classname = "SelectMasterProto";

/**
 * Selects a new master for playing on the server backend.
 */
message SelectMasterCMSG {
  uint64 master_id = 1;
}
